--- a/index.css
+++ b/index.css
@@ -2,28 +2,29 @@
  *{
     margin: 0px;
     padding: 0px;
-  
-  
-} 
-.wrapper{
+  } 
+.head{
     width: 100%;
+    margin-left: 200px;
 }
-
 .navbar{
     display: flex;
+    width: 1000px;
+    height: 50px;
     padding: 10px;
-    width: 1400px;
-    justify-content: space-between;
+    justify-content: space-between; 
 }
-
+.brand {
+    display: flex;
+    align-items: center;
+}
 .nav-options1 {
     display: flex;
     align-items: center;
+    width: 386px;
     margin: 0;
-    font-weight: bold;
     gap: 40px;
     cursor: pointer;
-   
 }
 
 .nav-options2 {
@@ -33,67 +34,50 @@
     color: #fa7436;
     gap: 40px;
     cursor: pointer;
-    
-   
 }
 
 .button1 {
     width: 130px;
-    height: 40px;
+    height: 45px;
     background-color: #fa7436; 
     border: none;
     border-radius: 5px;
     color: white;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font-size: 11px;
+    font-size: 15px;
     margin: 4px 2px;
     cursor: pointer;
 }
-.tree{
-    width: 100%;
-}
-
-
 .secondbody{
-     width: 100%; 
-     height: 800px;
+     width: 1000px; 
+     
 }
 .scondhead {
     display: flex;
     width: 100%;
 }
+.tree{
+    display: grid;  
+    width: 523px; 
+    margin-top: 70px;
+}
 
 .get {
-   
-    height: 260px;
-    width: 550px;
-    padding: 10px;
-    font-size: 62px;
+    font-family: popins;
+    font-size: 58px;
     font-weight: bold;
-    text-align: justify;
-
+    width: 522px; 
+    
 }
 .team {
-    width: 550px;
-    display: flex;
-    margin-top: 50px;
-    margin-left: 20px;
-   
+     width: 400px;
+     font-size:18px ;
 }
-.team > p {
-   
-    width: 750px;
-    height: 150px;
-    font-size: 30px;
-    font-weight: bold;
-    text-align: justify;
-}
+
 .buttonone {
-    width: 180px;
-    height: 50px;
-    font-weight: bold;
+    width: 150px;
+    height: 45px;
     background-color: #ffffff;
     border-color: #fa7436;
     border-radius: 5px;
@@ -104,179 +88,211 @@
     font-size: 19px;
     margin: 4px 2px;
     cursor: pointer;
-    position: relative;
-    top: 40px;
 }
 .secondimg {
- 
+    height: 523px;
+    width: 523px;
+    margin-top: 50px;
+}
+.Element7 > img {
+    width: 573;
+    height: 193;
     position: relative;
-    left: 80px;
+    right: 50px;
+    /* top: 20px; */
+    bottom: 10px;
+}
+
+.Group {
+    width: 350px;
+    height: 322px;
+    position: relative;
+    bottom: 135px;
+}
+.explore1 {
+    width: 153px;
+    height: 54px;
+    background: rgb(235, 232, 232);
+    border-radius: 5px;
+    box-shadow: #000000 5%;
+    align-content: center;
+    position: relative;
+    left: 367px;
+    bottom: 285px;
+}
+.explore2 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 133px;
+    height: 48px;
+}
+
+.trophy1 {
+    width: 140px;
+    height: 56px;
+    background-color: aliceblue;
+    border-radius: 5px;
+    box-shadow: #000000 5%;
+    position: relative;
+    right: 30px;
+    bottom: 470px;
+}
+
+.trophy2 {
+    display: flex;
+    gap: 10px;
+    width: 118px;
+    height: 48px;
+    }
+.star1 {
+    width: 172px;
+    height: 58px;
+    background-color: aliceblue;
+    border-radius: 5px;
+    box-shadow: #000000 5%;
+    position: relative;
+    bottom: 330px;
+    right: 20px;
+}
+.star2 {
+    display: flex;
+    gap: 10px;
+    width: 113px;
+    height: 47px;
 }
 .navbar-one {
     
-    width: 800px;
-   
-   
+    width: 841px;
+    height: 124px;
 }
 .travel-container {
     display: flex;
-    padding: 40px;
+    padding: 30px;
+    width: 693px;
+    height: 40px;
     justify-content: space-between;
     align-items: center;
-    background-color: azure;
-    border: 2px solid black;
-    height: 10px;
+    background-color: rgb(250, 246, 246);
     position: relative;
-    left: 200px;
-     width: 100%;
-    top: 40px;
-}
-
-
-.Service-card{
-   
-    height: 250px;
-    width:  350px;
-    background-color: rgb(234, 231, 231) ;
-   
-    }
-
- 
-.card-image-one { 
-    padding: 10px;
-    margin-left:100px;
-    height: 50px;
-    width: 120px;
-    color:red;
+    left: 145px;
+    top: 50px;
     
 }
-.card-content-one{
-    padding: 20px;
-   
-}
 
-.card-content-one>p{
-  
-    padding: 5px;
-    margin-top: 10px;
-    height: 60px;
-    font-size: 20px;
-    text-align: center;
-    color:black;
-    background-color: rgb(234, 231, 231);
-}
-
-
-.card-content-two{
-  padding: 20px;
-}
-.card-content-two>p{
-   
-  padding: 5px;
-  margin-top: 10px;
-  height: 100px;
-  width: 300px;
-  font-size: 20px;
-  text-align: center;
-  color:black;
-  
-  
-}
-
-.card-image-three{
-    margin-left: 100px;
-    height: 50px;
-    width: 120px;
-    color:orange;
-}
-.card-content-three{
-  padding: 5px;
-}
-.card-content-three>p{
-  padding: 5px;
-  margin-top: 10px;
-  
-  height: 100px;
-  width: 300px;
-  font-size: 20px;
-  text-align: center;
-  color:black;
-  background-color: rgb(234, 231, 231);
-}
-.travel-body{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-}
 
 .Servicesone{
-    width: 100%;
+    width: 1000px;
     margin-top: 70px;
     padding: 30px;
     height: 600px;
     text-align: center;
     font-size: 40px;  
 }
-
-.service-tra {
-    /* width: 100%; */
+.flight{
+    height: 80px;
+    width: 100px;
     position: relative;
-    bottom: 100px;
+    left: 900px;
+    bottom: 130px;
 }
 
+.card-image-one { 
+    width: 48px;
+    height: 48px;
+   
+ }
+.Service-card1{
+   display: grid;
+   /* width: 370px; */
+   height: 278px;
+   background-color: rgb(234, 231, 231) ;
+   align-content: space-evenly;
+   padding: 20px;
+   
+   
+}
+.card-image-two{
+    width: 48px;
+    height: 48px;
+}
+ .Service-card2 {
+    display: grid;
+   
+    height: 278px;
+    background-color: rgb(234, 231, 231) ;
+    align-content: space-evenly;
+    padding: 20px;
+ }
+
+ .card-image-three{
+    width: 48px;
+    height: 48px;
+ }
+ .Service-card3 {
+    display: grid;
+    width: 320px;
+    height: 278px;
+    background-color: rgb(234, 231, 231) ;
+    align-content: space-evenly;
+    padding: 20px;
+ }
+ 
 .Services-body{
     display: flex;
-    width: 100%;
+    width: 100px;
     justify-content: space-around;
     gap: 40px;
     margin-top: 100px;
     height: 400px;
 }
+
+.servicetwo{
+height: 999px;
+width: 1200px;
+
+}
+
 .Service-head1 {
-   
-    justify-content: center;
+    width: 675px;
+    height: 142px;
+    margin-left: 150px;
 }
 .Service-head > h6{
     text-align: center;  
    
 }
 
-.flight{
-    height: 80px;
-    width: 100px;
-    position: relative;
-    left: 1000px;
-    bottom: 130px;
-}
+
 .Service-head{
     
-    justify-content: center;
+   width: 1000px;
+
 }
 
 .service-tra{
      
-      width: 1500px;
-      margin-top: 200px;
+      width: 900px;
+      height: 426px;
+      margin-top: 100px;
       margin-bottom: 100px;
       display: flex;
       flex-direction: row;
-      
       justify-content: space-evenly;
  
 } 
 .slider{
       justify-content: center;
       position: relative;
-      bottom: 180px;
+      bottom: 90px;
       
     
 }
 
 .service-vac {
-    width: 1500px;
+    width: 1000px;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-around;
 }
 
@@ -292,34 +308,42 @@
 }
 
 .mike {
+
     display: flex;
+    gap: 40px;
+    width: 1000px;
+    margin-top: 50px;
+    height: 300px;
     margin-top: 200px;
     margin-bottom: 340px;
 }
 
 .taylor {
-    /* border: 1px solid black; */
    
-    height: 100px;
-    width: 600px;
+    height: 400px;
+    width: 500px;
 }
-.taylor > h2{
-    font-size: 4rem;
-    width: 600px;
+.taylor > p{
+    font-size: 4.2rem;
+    width: 400px;
+    
 }
-.Client-1 {
-    height: 200px;
-    width: 200px;
+.Sliderbtn {
+  position: relative;
+  right: 130px;
 }
+
+
 .Client-2 {
     position: relative;
-    top: 100px;
-    right: 40px;
+    bottom: 300px;
+    left: 60px;
+    
 }
 .Element-two {
     position: relative;
-    top: 20px;
-    right: 70px;
+    bottom: 20px;
+    right: 140px;
 
 }
 
@@ -327,7 +351,7 @@
     margin-left: 50px;
 }
 .latest{
-    width: 1500px;
+    width: 1000px;
     margin-top: 100px;
     margin-bottom: 0px;
     
@@ -336,20 +360,22 @@
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
 .Slider-three {
     margin-left: 70px;
 }
 .deals {
-    
-    width: 100%;
-    
+        
+    height: 800px;
+}
+.searchbar > input {
+    width: 800px;
 }
 .subscribe {
-    margin-left: 100px;
-    /* margin-top: 100px; */
+   
     height: 300px;
-    width: 1200px;
-    margin-top: 100px;
+    width: 1000px;
+    margin-top: 200px;
     color: aliceblue;
     border-radius: 10px;
    
@@ -386,36 +412,40 @@
     margin: 4px 2px;
     cursor: pointer;
     position: relative;
-    right: 150px;
-    bottom: 6px;
+    left: 406px;
+    bottom: 68px;
  }
- .Element5 {
-    height: 100px;
- }
+.Element5 {
+    width: 10px;
+    height: 10px;
+}
  .Element5 >img {
     /* height: 15px; */
     /* width:  400px; */
     position: relative;
-    bottom: 290px;
-    right: 360px;
+    bottom: 283px;
+    left: 1px;
+ }
+ .Element6 {
+   height: 10px;
  }
  .Element6 > img {
      position: relative;
-    bottom: 300px;
-     left: 500px;
+     bottom: 280px;
+     left:  440px;
    
  }
  .final {
     display: flex;
     justify-content: center;
+    margin-top: 100px;
     height: 230px;
-    width: 1300px;
-    /* border: 1px solid black; */
+    width: 1000px;
+    
  }
  .first > p {
     color: black;
     font-size: 20px;
-    /* height: 100px; */
     width: 300px;
  }
  .second {
@@ -439,67 +469,105 @@
     justify-content: space-between;
 
  }
-@media screen and (max-width: 1032px) { 
-   
-}
-@media screen and (max-width: 860px) {
-    
-}
- 
-
-@media screen and (max-width: 688px) {
-    /* .secondbody{
-        width: 100%; 
-        height: 800px;
-   } */
-}
-@media screen and (max-width: 516px) {
-    
-}
-@media screen and (max-width: 368px) {
-    .navbar{
-        display: flex;
-         width: 1000px;
-           
-    }
-    .scondhead {
-        display: grid;
-        width: 100%;
-    }
-    .get {
-   
-        height: 80px;
-        width: 1000px;
-      }
-      .team {
-       margin-top: 200px;
-        height: 100px;
-        width: 1400px;
-      }
-    .travel-container {
-        display: flex;
-        height: 100px;
-        width: 600px;
-     }
-     
-     .Servicesone{
-       margin-top: 400px;
-       width: 800px;
-       
+ .Service-headone {
+    justify-content: center;
+ }
+@media screen and (max-width: 576px) { 
+   .navbar{
+    width: 50px;
+    margin-bottom: 100px;
    }
-   .Services-body{
-    width: 800px;
-    }
-
-    .service-vac {
-        width: 800px;
-       
-    }
-    
-    .mike {
-        display: grid;
-       height: 800px;
-       width: 1200px;
-    }
-}
+   .scondhead {
+    display: grid;
+   }
+   .tree {
+    width: 100%;
+    display: grid;
+   }
+  
+   .travel-container {
+    position: relative;
+    left: 0px;
+   }
+   .Service-head {
+    width: 500px;
+   }
+   .Services-body {
+    display: grid;
+   }
+   .servicetwo {
+    margin-top: 700px;
+    width: 500px;
+   }
+   .Service-head1 {
+    width: 400px;
+    margin-right: 800px;
+    margin-left: 1px;
+   }
+   .tex {
+    justify-content: flex-start;
+   }
+   .service-vac {
+    display: grid;
+    justify-content: flex-start;
+   }
+   .slider {
+   position: relative;
+   right: 400px;
+   top: 950px;
+   }
+   .service-tra {
+      display: grid;
+      justify-content: flex-start;
+      margin-bottom: 100px;
+   }
+  
+   .Service-headone > h2,h6{
+   display: flex;
+   margin-top: 850px;
  
+    }
+   .Element {
+   margin-right: 600px;
+   }
+   .slider2 {
+    margin-right: 700px;
+   }
+   .mike {
+    display: grid;
+   justify-content: flex-start;
+   }
+   .lastblog {
+    margin-right: 600px;
+    margin-top: 550px;
+   }
+   .latest {
+    display: grid;
+   position: relative;
+   right: 300px;
+   }
+   .Slider-three {
+    margin-right: 700px;
+   }
+   .deals {
+    display: flex;
+    width: 800px;
+    height: 200px;
+   }
+   .subscribe {
+    width: 1000px;
+   }
+   
+   .final {
+    display: grid;
+    justify-content: flex-start;
+    gap: 20px;
+   
+   }
+   .end {
+    display: grid;
+    position: relative;
+    top: 600px;
+   }
+  
+}
